[package]
name = "muservice-in-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "mulib"
path = "src/lib.rs"

[[bin]]
name = "muservice-in-rust"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
tokio = {version = "1.25.0", features=["full"]}
tracing = "0.1.37"
tracing-subscriber = {version="0.3.16", features=["env-filter"]}
