[package]
name    = "muservice-in-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "mulib"
path = "src/lib.rs"

[[bin]]
name = "muservice-in-rust"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow             = "1.0.69"
async-trait        = "0.1.68"
axum               = "0.6.8"
axum-macros        = "0.3.4"
chrono             = {version="0.4.23", features = ["serde"]}
hyper              = "0.14.24"
jsonwebtoken       = "8.2.0"
serde              = {version="1.0.152", features=["derive"]}
serde_json         = "1.0.93"
sqlx               = {version="0.6.2", features=["postgres", "all-types", "chrono", "runtime-tokio-rustls"]}
thiserror          = "1.0.38"
tokio              = {version="1.25.0", features=["full"]}
tower-http         = {version="0.3.5", features=["trace"]}
tracing            = "0.1.37"
tracing-subscriber = {version="0.3.16", features=["env-filter"]}
ulid               = "1.0.0"

